tests/failing/2-comptime-calc-runtime-name/main.af
calc: /std/math/calc

calculated: (ok: (), @f64) {
    ok
}

calculate: (name: @str, value: @f64, ok: ()) {
    calc.new(
        "value",
        @exit(1),
        calc.var(name, value) calc.end,
        calculated(ok)
    )
}

main: () {
    calculate("value", 2.0, @exit(0))
}
